# confidence

./: Cargo.toml  README.md  TODO.md  confidence
src/: lib.rs  main.rs
tests/: integration_test.rs
