[package]
name = "confidence"
version = "0.1.0"
authors = ["John Baber-Lucero <cargo@frundle.com>"]
license = "GPL-3.0"
description = "Build confidence that two directories are equal by hashing contents"
homepage = "https://github.com/jbaber/confidence"
repository = "https://github.com/jbaber/confidence"
readme = "README.md"
edition = "2018"

[dependencies]
clap = {version = "~2.33.0"}
walkdir = "2"
same-file = "1.0.0"
sha1 = "0.6.0"
base64 = "0.13.0"
